Fix navigation overflow on narrow screens

--- a/nhkstories/static/nhkstories/style.css
+++ b/nhkstories/static/nhkstories/style.css
@@ -23,7 +23,7 @@ header h1 { margin:0; font:28px sans-serif; letter-spacing:2px; word-spacing:2px
 /* margin atop <a> (not padding in <h1>) for cross-browser consistency */
 header h1 a, header h1 a:hover { display:inline-block; margin:10px 0 10px; padding:0 14px 18px; }
 /* ruby toggle */
-#ruby-toggles { margin:0 auto; }
+#ruby-toggles { margin:0 auto 1em auto; }
 #ruby-toggles ul {
     list-style-type:none; margin:0; padding:0;
     display:flex; justify-content:space-between; width:15em;
@@ -37,7 +37,10 @@ header h1 a, header h1 a:hover { display:inline-block; margin:10px 0 10px; paddi
 header nav { font-size:20px; }
 header nav ul {
     list-style-type:none; margin:0; padding:0;
-    display:flex; justify-content:space-around; width:20em;
+    display:flex; justify-content:space-around; width:400px;
+}
+@media (max-width:399px) {
+    header nav ul { width:100vw; }
 }
 header nav li { display:inline-block; padding:10px; }
 header nav a { color: #ccc; }
